# CLI

research-proposal-cli/: PLAN.md  README.md  build.sh  pyproject.toml
research-proposal-cli/scripts/: md_to_pdf.py
research-proposal-cli/src/proposal/: __init__.py  agents.py  cli.py  config.py  pdf_converter.py  ui.py
research-proposal-cli/src/proposal/llm/: client.py  prompts.py
research-proposal-cli/src/proposal/phases/: literature.py  outline.py  output.py  pdf.py  requirements.py  writing.py
research-proposal-cli/src/proposal/search/: arxiv_search.py  pubmed.py  web.py
research-proposal-cli/src/proposal/validators/: quality.py
